--- a/config.yaml
+++ b/config.yaml
@@ -52,7 +52,7 @@ params:
         avatar:
             enabled: true
             local: true
-            src: img/avatar.png
+            src: img/avatar.jpg
 
     article:
         math: false
