--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ copyright:
 languages:
     zh-cn:
         languageName: 中文
-        title: JieR的随想记录
+        title: CoderJie
         weight: 1
         params:
             description: 记录和分享
